packages/tree-sitter/test/corpus/body.txt
================
Body only
================

just some text

------

(source_file
  (body
    (body_content)))

================
Body with multiple lines
================

line one
line two
line three

------

(source_file
  (body
    (body_content)))

================
Body with special characters
================

hello *world* and _more_

------

(source_file
  (body
    (body_content)))

================
Body starting with dash
================

- list item

------

(source_file
  (body
    (body_content)))

================
Body with markdown heading
================

# Hello world

Some paragraph text.

------

(source_file
  (body
    (body_content)))

================
Whitespace before triple dash is body
================

  ---
content
---

------

(source_file
  (body
    (body_content)))

================
Body starting with double dash
================

-- not frontmatter

------

(source_file
  (body
    (body_content)))
